# prefect-examples

./: .env.example  .gitignore  404.html  CLAUDE.md  Makefile  README.md  compose.yml  index.html  mkdocs.yml  objects.inv  prefect.yaml  pyproject.toml
api-reference/: index.html
chirps/: index.html
cli-reference/: index.html
climate-integration/: index.html
core-concepts/: index.html
docs/: api-reference.md  chirps.md  cli-reference.md  climate-integration.md  core-concepts.md  era5-land.md  feature-coverage.md  flow-reference.md  geotiff-format.md  getting-started.md  index.md  infrastructure.md  iso3-country-codes.md  openmeteo.md  patterns.md  testing.md  tutorials.md  xarray-rioxarray-guide.md  yr-weather.md
era5-land/: index.html
feature-coverage/: index.html
flow-reference/: index.html
flows/: 001_hello_world.py  002_python_tasks.py  003_task_dependencies.py  004_taskflow_etl.py  005_task_results.py  006_conditional_logic.py  007_state_handlers.py  008_parameterized_flows.py  009_subflows.py  010_dynamic_tasks.py  011_polling_tasks.py  012_retries_and_hooks.py  013_reusable_tasks.py  014_events.py  015_flow_of_flows.py  016_concurrency_limits.py  017_variables_and_params.py  018_early_return.py  019_context_managers.py  020_complex_pipeline.py  021_task_caching.py  022_task_timeouts.py  023_task_run_names.py  024_advanced_retries.py  025_structured_logging.py  026_tags.py  027_flow_run_names.py  028_result_persistence.py  029_markdown_artifacts.py  030_table_and_link_artifacts.py  031_secret_block.py  032_custom_blocks.py  033_async_tasks.py  034_concurrent_async.py  035_async_flow_patterns.py  036_async_map_and_submit.py  037_flow_serve.py  038_schedules.py  039_work_pools.py  040_production_pipeline.py  (+73 more)
geotiff-format/: index.html
getting-started/: index.html
infrastructure/: index.html
iso3-country-codes/: index.html
openmeteo/: index.html
patterns/: index.html
scripts/: create_blocks.py  generate_prefect_yaml.py
search/: search_index.json
testing/: index.html
tests/: conftest.py  test_002_python_tasks.py  test_003_task_dependencies.py  test_026_tags.py  (+118 more)
(+345 files in other folders)
